--- a/assets/style.css
+++ b/assets/style.css
@@ -39,18 +39,40 @@ a {
   text-decoration: none;
 }
 
+.image {
+  width: 100%;
+  height: 300px;
+  object-fit: contain;
+}
+
 .greeting {
   font-weight: bold;
 }
+
 .flex-container {
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
+  gap: 32px;
+}
+
+@media (min-width: 769px) {
+  .flex-container {
+    flex-direction: row;
+    /* display: flex; */
+    /* gap: 32px; */
+  }
+}
+
+.box {
+  position: relative;
 }
 
 .box-1 {
-  flex: 2;
   border: solid black;
   overflow: none;
+  margin-bottom: 32px;
+  flex: 2;
 }
 
 .box-2 {
@@ -65,4 +87,12 @@ a {
 
 footer {
   font-size: smaller;
+}
+
+.project-title {
+  position: absolute;
+  bottom: 10px;
+  left: 0;
+  padding: 1rem;
+  background-color: white;
 }
