--- a/assets/style.css
+++ b/assets/style.css
@@ -2,8 +2,11 @@
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
+.header {
+  width: 100%;
+}
+
 nav {
-  padding-top: 15px;
   margin-right: 20px;
   float: right;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
@@ -20,47 +23,46 @@ li {
   padding-right: 10px;
 }
 
-.head-container {
+.flex-container-1 {
   display: flex;
-  flex-direction: column;
-}
-
-h1 {
-  font-size: 48px;
 }
 
 .avatar {
-  border-radius: 5px;
   border: solid black;
-  width: 150px;
+  width: 100px;
+  border-radius: 100%;
+}
+
+h1 {
+  font-size: 68px;
+  margin: 0 auto;
+  text-align: center;
+  padding-bottom: 30px;
 }
 
 a {
   text-decoration: none;
+  color: seagreen;
+  font-size: 20px;
 }
 
 .image {
   width: 100%;
   height: 300px;
-  object-fit: contain;
+  object-fit: cover;
 }
 
-.greeting {
-  font-weight: bold;
-}
-
-.flex-container {
+.flex-container-2 {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
+  align-items: flex-start;
   gap: 32px;
 }
 
 @media (min-width: 769px) {
-  .flex-container {
+  .flex-container-2 {
     flex-direction: row;
-    /* display: flex; */
-    /* gap: 32px; */
   }
 }
 
@@ -69,20 +71,16 @@ a {
 }
 
 .box-1 {
-  border: solid black;
-  overflow: none;
-  margin-bottom: 32px;
   flex: 2;
+  margin-bottom: 22px;
 }
 
 .box-2 {
   flex: 1;
-  border: solid black;
 }
 
 .box-3 {
   flex: 1;
-  border: solid black;
 }
 
 footer {
@@ -91,7 +89,7 @@ footer {
 
 .project-title {
   position: absolute;
-  bottom: 10px;
+  top: 5px;
   left: 0;
   padding: 1rem;
   background-color: white;
