--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,6 @@
 * {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  background-color: lightgray;
 }
 
 .header {
@@ -40,6 +41,16 @@ h1 {
   padding-bottom: 30px;
 }
 
+.new-container {
+  display: flex;
+  justify-content: center;
+}
+
+.box-1 {
+  flex: 2;
+  justify-content: center;
+}
+
 a {
   text-decoration: none;
   color: seagreen;
@@ -47,17 +58,16 @@ a {
 }
 
 .image {
-  width: 100%;
   height: 300px;
   object-fit: cover;
+  justify-content: center;
 }
 
 .flex-container-2 {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  align-items: flex-start;
-  gap: 32px;
+  justify-content: space-around;
 }
 
 @media (min-width: 769px) {
@@ -66,31 +76,23 @@ a {
   }
 }
 
-.box {
-  position: relative;
-}
-
-.box-1 {
-  flex: 2;
-  margin-bottom: 22px;
-}
-
-.box-2 {
-  flex: 1;
-}
-
+.box-2,
 .box-3 {
   flex: 1;
 }
 
-footer {
-  font-size: smaller;
+.box {
+  position: relative;
 }
 
 .project-title {
   position: absolute;
-  top: 5px;
+  bottom: 2px;
   left: 0;
-  padding: 1rem;
+  padding: 0.5rem;
   background-color: white;
+}
+
+footer {
+  font-size: smaller;
 }
